--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "typescript": "^5.2.2",
     "vite": "^4.4.8"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.20",
+    "@types/node": "^20.8.10",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.3"
   }
 }
